--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -435,7 +435,7 @@ header {
     margin-bottom: 0;
   }
   header nav ul a:hover{
-    color: #94c7fd;
+    color: #686868;
   }
 
 }
@@ -1162,7 +1162,7 @@ header {
         ul {
           width: 82vw;
           padding-right: 3vw;
-          padding-bottom: 4%;
+          padding-bottom: 8%;
           margin-left: 0;
 
           li {
@@ -1801,9 +1801,9 @@ footer article ul li{
 
 @media (max-width: 810px){
   .icon-skill img {
-    width: 7vw;
+    width: 8vw;
     display: flex;
-    padding-right: 1vw;
+    padding-right: 1.5vw;
     padding-top: 0.7rem;
     padding-bottom: 0.7rem;
     padding-bottom: 5%;
