--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -1166,6 +1166,7 @@ header {
           padding-bottom: 9%;
           margin-left: 0;
 
+
           li {
             padding-bottom: .5%;
             font-size: 1.05rem;
@@ -1173,6 +1174,12 @@ header {
         }
       }
     }
+  }
+
+
+
+  .about-me .curriculumvitae .flexbox-container .last-ul{
+    padding-bottom: 4.5%; 
   }
 }
   
