--- a/src/assets/styles/layouts/_atarashii.scss
+++ b/src/assets/styles/layouts/_atarashii.scss
@@ -739,7 +739,7 @@ main h1 {
 }
 
 .recomendations-object img {
- width: 40vw;
+ width: 100%;
  -o-object-fit: cover;
  object-fit: cover;
  height: 45vh;
@@ -749,14 +749,13 @@ main h1 {
 @media (max-width: 992px){
 
  .recomendations-object > img {
-   width: 35vw;
+   width: 100%;
  }
  }
 @media (max-width: 810px){
 
 .recomendations-object > img {
- width: 60vw;
-}
+  width: 100%;}
 }
 @media (max-width: 567px){
 
@@ -767,7 +766,7 @@ main h1 {
 }
 
 .recomendations-object  img {
- width: 85vw;
+  width: 100%;
  height: 50vh;
 }
 }
