--- a/src/assets/styles/layouts/_domsum.scss
+++ b/src/assets/styles/layouts/_domsum.scss
@@ -598,12 +598,12 @@ main h1 {
 }
  main h1, main h3, main p {
    padding-left: 5.5%;
-   padding-right: 7%;
+   padding-right: 3%;
  }
 
  main h3 {
    padding-top: 1%;
-   padding-bottom: 0%;
+   padding-bottom: %;
    font-size: 1rem;
  }
 
