--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -1215,14 +1215,14 @@ header {
     }
     
     .curriculumvitae {
-      padding-bottom: 7%;
+      padding-bottom: 13%;
     padding-top: 5vh;
 
       .introduction p {
         width:88vw;
         padding-bottom: 3%;
         margin: $afv-margin-auto;
-        font-size: 1rem;
+        font-size: 0.95rem;
       }
       
       h1 {
@@ -1230,7 +1230,7 @@ header {
         padding-top: 8%;
         padding-bottom: 3%;
         margin: $afv-margin-auto;
-        margin-bottom: 4%;
+        margin-bottom: 6%;
         font-size: 1.3rem;
       }
 
@@ -1247,7 +1247,7 @@ header {
 
         ul {
           width: 85vw;
-          padding-bottom: 5.5%;
+          padding-bottom: 10%;
 
           li {
             font-size:.95rem;
@@ -1809,23 +1809,39 @@ footer article ul li{
 
 @media (max-width: 810px){
   .icon-skill img {
-    width: 9vw;
+    width: 8vw;
     display: flex;
-    padding-right: 2vw;
+    padding-right: 1.8vw;
     padding-top: 0.7rem;
     padding-bottom: 0.7rem;
     padding-bottom: 5%;
   }
 
 }
+.icon-skill-3{
+  display:none;
+}
 @media (max-width: 567px){
   .icon-skill img {
-    width: 9vw;
+    width: 12vw;
     display: flex;
-    padding-right: 1.6vw;
+    padding-right: 2vw;
     padding-top: 0.7rem;
     padding-bottom: 0.7rem;
     padding-bottom: 5%;
+  }
+  .icon-skill-2 {
+    display:none;
+  }
+  .icon-skill-3 {
+    display:flex;
+  }
+  .about-me .curriculumvitae .flexbox-container .icon-skill-36 {
+    padding-bottom: 0%;
+  }
+  .icon-skill-36 img {
+
+    padding-bottom: 3%;
   }
 }
 
