--- a/src/assets/styles/layouts/_atarashii.scss
+++ b/src/assets/styles/layouts/_atarashii.scss
@@ -605,7 +605,7 @@ main h1 {
 
  main h3 {
    padding-top: 1%;
-   padding-bottom: 3%;
+   padding-bottom: 4%;
    font-size: 1.2rem;
  }
 
@@ -749,13 +749,13 @@ main h1 {
 @media (max-width: 992px){
 
  .recomendations-object > img {
-   width: 90%;
+   width: 90vw;
  }
  }
 @media (max-width: 810px){
 
 .recomendations-object > img {
-  width:80%;}
+  width:80vw;}
 }
 @media (max-width: 567px){
 
@@ -766,7 +766,7 @@ main h1 {
 }
 
 .recomendations-object  img {
-  width: 70%;
+  width: 80vw;
  height: 50vh;
 }
 }
@@ -947,7 +947,7 @@ footer article ul li{
     .program{
       display:flex;padding-right: 7%;
       padding-left: 4%;
-      padding-top: 6%;
+      padding-top: 7%;
     
       img{
         width:4rem;display:flex;padding-right:2.5vw;
