--- a/src/assets/styles/layouts/_atarashii.scss
+++ b/src/assets/styles/layouts/_atarashii.scss
@@ -739,7 +739,7 @@ main h1 {
 }
 
 .recomendations-object img {
- width: 100%;
+ width: 40vw;
  -o-object-fit: cover;
  object-fit: cover;
  height: 45vh;
@@ -748,13 +748,13 @@ main h1 {
 /* media queries main detalles de una receta*/
 @media (max-width: 992px){
 
- .recomendations-object > img {
+ .recomendations-object  img {
    width: 90vw;
  }
  }
 @media (max-width: 810px){
 
-.recomendations-object > img {
+.recomendations-object  img {
   width:80vw;}
 }
 @media (max-width: 567px){
