--- a/src/assets/styles/layouts/_atarashii.scss
+++ b/src/assets/styles/layouts/_atarashii.scss
@@ -605,7 +605,7 @@ main h1 {
 
  main h3 {
    padding-top: 1%;
-   padding-bottom: 4%;
+   padding-bottom: 2%;
    font-size: 1.2rem;
  }
 
@@ -953,7 +953,9 @@ footer article ul li{
         width:4rem;display:flex;padding-right:2.5vw;
       }
     }
-    
+    main h3 {
+      padding-bottom: 3%;
+    }
   }
 
 
