--- a/src/assets/styles/layouts/_atarashii.scss
+++ b/src/assets/styles/layouts/_atarashii.scss
@@ -597,6 +597,7 @@ main h1 {
  
  main h1 {
    padding-top: 5.5%;
+   padding-bottom:0;
 }
  main h1, main h3, main p {
    padding-left: 5.5%;
@@ -605,7 +606,7 @@ main h1 {
 
  main h3 {
    padding-top: 1%;
-   padding-bottom: 1%;
+   padding-bottom: 0.5%;
    font-size: 1.2rem;
  }
 
