--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -226,7 +226,8 @@ html {
   font-weight: 200;
   margin-top: 0;
   margin-bottom: 0;
-  border: 1px solid white;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
   display: block;
   border-left: 0;
 border-right: 0;
@@ -1163,7 +1164,7 @@ header {
         ul {
           width: 82vw;
           padding-right: 3vw;
-          padding-bottom: 9%;
+          padding-bottom: 7%;
           margin-left: 0;
 
 
