--- a/src/assets/styles/layouts/_main-gracias.scss
+++ b/src/assets/styles/layouts/_main-gracias.scss
@@ -158,7 +158,7 @@ body {
   pointer-events: auto;
   position: relative;
   width: 100%;
-  filter:invert(1);
+ 
 }
 .modal-text-center {
   justify-content: center;
@@ -280,4 +280,35 @@ max-width: 100vw;
 
   max-height: 100vh;
   max-width: 100vw;
+}
+
+.modal-content {
+  background-clip: padding-box;
+  background-color: black;
+  border: 0 solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+  display: flex;
+  flex-direction: column;
+  outline: 0;
+  pointer-events: auto;
+  position: relative;
+  width: 100%;
+}
+html, * {
+  font-weight: 300;
+  color: white;
+}
+.btn {
+  padding: 12px 22px;
+  margin-top: 5%;
+  margin-bottom: 3%;
+  font-size: 1.15rem;
+  font-weight: 300;
+  color: white;
+  cursor: pointer;
+  background-color: black;
+  border: 1px solid white;
+  border-radius: 30px;
+  text-decoration: none;
+  font-family: sans-serif;
 }
