--- a/src/assets/styles/layouts/_main-gracias.scss
+++ b/src/assets/styles/layouts/_main-gracias.scss
@@ -312,3 +312,12 @@ html, * {
   text-decoration: none;
   font-family: sans-serif;
 }
+
+@media (max-width: $afv-media-tablet) {
+
+
+
+  .modal {
+    Height: 93vh;
+  }
+}
