--- a/src/assets/styles/layouts/_main-gracias.scss
+++ b/src/assets/styles/layouts/_main-gracias.scss
@@ -216,6 +216,8 @@ img{
     background: #94c7fd;
     opacity: 1;
     transition: 0.4s;
+    color:black;
+    border: 1px solid #94c7fd;
   }
 }
 
