--- a/src/assets/styles/layouts/_atarashii.scss
+++ b/src/assets/styles/layouts/_atarashii.scss
@@ -1147,6 +1147,10 @@ footer article ul li{
     display: flex;
   }
 
+  .flex-instagram img {
+    width: 50vw;
+  }
+
   .insta-2, 
   .insta-3{
     margin-top:0;
